--- a/representation.html
+++ b/representation.html
@@ -208,7 +208,7 @@
                           <tr>
                             <td>An Inconvenient Truth</td>
                             <td>schema: about</td>
-                            <td></td>
+                            <td>Global warming</td>
                           </tr>
                           <tr>
                             <td>An Inconvenient Truth</td>
@@ -228,7 +228,7 @@
                           <tr>
                             <td>An Inconvenient Truth</td>
                             <td>schema: associatedMedia</td>
-                            <td></td>
+                            <td>Movie</td>
                           </tr>
                           
                         </tbody>
@@ -257,7 +257,7 @@
                            <tr>
                             <td>Non c'è più tempo</td>
                             <td>frbroo:R4_is embodied in</td>
-                            <td></td>
+                            <td>Book</td>
                           </tr>
                           <tr>
                            <tr>
@@ -299,7 +299,7 @@
                       </table>
             </div>
             <div style="text-align: center";>
-              <h4 class="title" id="metadata"><br>Invenzione</h4>
+              <h4 class="title" id="metadata"><br>Three-dimensional model of electricity consumption in Manchester</h4>
               <div class="line-mf" style="margin-bottom: 40px;"></div>
               <!-- CSV 4-->
               <br>
@@ -313,30 +313,30 @@
                         </thead>
                         <tbody>
                           <tr>
-                            <td></td>
+                            <td>Three-dimensional model of electricity consumption</td>
                             <td>P50_has current keeper (is current keeper of)</td>
-                            <td></td>
+                            <td>Science Museum Group</td>
                           </tr>
                           <tr>
-                            <td></td>
+                            <td>Three-dimensional model of electricity consumption</td>
                             <td>P4_has-time-span (is time span of)</td>
-                            <td></td>
+                            <td>1954-55</td>
                           </tr>
                            <tr>
-                            <td></td>
+                            <td>Three-dimensional model of electricity consumption</td>
                             <td>schema: about</td>
-                            <td></td>
+                            <td>Electricity was consumed in Manchester during the 1950s</td>
                           </tr>
                            <tr>
-                            <td></td>
+                            <td>Three-dimensional model of electricity consumption</td>
                             <td>P46_is_composed of (forms part of)</td>
-                            <td></td>
+                            <td>Wood and paper</td>
 			   </tr>
                         </tbody>
                       </table>
             </div>
             <div style="text-align: center";>
-              <h4 class="title" id="metadata"><br>Dipinto</h4>
+              <h4 class="title" id="metadata"><br>Mezzogiorno dei facchini</h4>
               <div class="line-mf" style="margin-bottom: 40px;"></div>
               <!-- CSV 4-->
               <br>
@@ -350,30 +350,30 @@
                         </thead>
                         <tbody>
                           <tr>
-                            <td></td>
+                            <td>Mezzogiorno dei facchini</td>
                             <td>schema:CountryofOrigin</td>
-                            <td></td>
+                            <td>Italy</td>
                           </tr>
                            <tr>
-                            <td></td>
+                            <td>Mezzogiorno dei facchini</td>
                             <td>dcterms: title</td>
-                            <td></td>
+                            <td>Mezzogiorno dei facchini</td>
                           </tr>
                            <tr>
-                            <td></td>
+                            <td>Mezzogiorno dei facchini</td>
                             <td>dcterms: Creator</td>
-                            <td></td>
+                            <td>Rambaldi Carlo</td>
                           </tr>
                            <tr>
-                            <td></td>
+                            <td>Mezzogiorno dei facchini</td>
                             <td>schema:TemporalCoverage</td>
-                            <td></td>
+                            <td>1954</td>
                           </tr>
                         </tbody>
                       </table>
             </div>
             <div style="text-align: center";>
-              <h4 class="title" id="metadata"><br>Fotografie</h4>
+              <h4 class="title" id="metadata"><br>The glacier melt series</h4>
               <div class="line-mf" style="margin-bottom: 40px;"></div>
               <!-- CSV 4-->
               <br>
@@ -387,30 +387,30 @@
                         </thead>
                         <tbody>
                           <tr>
-                            <td></td>
+                            <td>The glacier melt series</td>
                             <td>schema: temporalCoverage</td>
-                            <td></td>
+                            <td>1999-2019</td>
                           </tr>
                            <tr>
-                            <td></td>
+                            <td>The glacier melt series</td>
                             <td>schema: abstract</td>
-                            <td></td>
+                            <td>dramatic impact that global warming is having on our world</td>
                           </tr>
                            <tr>
-                            <td></td>
+                            <td>The glacier melt series</td>
                             <td>schema: about</td>
-                            <td></td>
+                            <td>Melt artic ice</td>
                           </tr>
                            <tr>
-                            <td></td>
+                            <td>The glacier melt series</td>
                             <td>dcterms: creator</td>
                             <td>Olafur Eliasson</td>
                           </tr>
                           <tr>
                            <tr>
-                            <td></td>
+                            <td>The glacier melt series</td>
                             <td>dcterms: title</td>
-                            <td></td>
+                            <td>he glacier melt series</td>
                           </tr>
                         </tbody>
                       </table>
