--- a/representation.html
+++ b/representation.html
@@ -484,7 +484,7 @@
                           <tr>
                             <td>E' troppo tardi per fermare il cambiamento climatico?</td>
                             <td>schema: associatedMedia</td>
-                            <td></td>
+                            <td>Video</td>
                           </tr>
                         </tbody>
                       </table>
@@ -504,7 +504,7 @@
                           <tr>
                             <td>CEDA Archive</td>
                             <td>schema: temporalcoverage</td>
-                            <td></td>
+                            <td>From 2010 to 2019</td>
                           </tr>
                            <tr>
                             <td>CEDA Archive</td>
@@ -520,17 +520,17 @@
                           <tr>
                             <td>CEDA Archive</td>
                             <td>dwc:istitutionCode</td>
-                            <td></td>
+                            <td>v20210809</td>
                           </tr>
                           <tr>
                             <td>CEDA Archive</td>
                             <td>schema: datePublished</td>
-                            <td></td>
+                            <td>2021-08-09</td>
                           </tr>
                           <tr>
                             <td>CEDA Archive</td>
                             <td>dwc: accessRights</td>
-                            <td></td>
+                            <td>Public data</td>
                           </tr>
                           <tr>
                             <td>CEDA Archive</td>
@@ -540,7 +540,7 @@
                           <tr>
                             <td>CEDA Archive</td>
                             <td>schema: encodingFormat</td>
-                            <td></td>
+                            <td>XML</td>
                           </tr>
                         </tbody>
                       </table>
