--- a/knowledge.html
+++ b/knowledge.html
@@ -149,7 +149,7 @@
               <div class="col-lg-4 col-md-6 portfolio-wrap filter-web">
                 <div class="portfolio-item">
                   <a href="https://opac.sbn.it/opacsbn/opaclib?db=solr_iccu&select_db=solr_iccu&nentries=1&from=9&searchForm=opac/iccu/error.jsp&resultForward=opac/iccu/full_uni.jsp&do_cmd=search_show_cmd&format=unimarc&rpnlabel=+Tutti+i+campi+%3D+timothy+morton+%28parole+in+AND%29+&rpnquery=%40attrset+bib-1++%40attr+1%3D1016+%40attr+4%3D6+%22timothy+morton%22&sortquery=&sortlabel=&totalResult=29&fname=none"></a>
-                  <img src="assets/img/morton_2.jpeg" class="img-fluid" id="items" alt="">
+                  <img src="assets/img/video.png" class="img-fluid" id="items" alt="">
                   <div class="portfolio-info">
                     <h3>Timothy Morton - Being Ecological</h3>
                   </div>
@@ -179,7 +179,7 @@
               <div class="col-lg-4 col-md-6 portfolio-wrap filter-web">
                 <div class="portfolio-item">
                    <a href="https://www.wikidata.org/wiki/Q26841"></a>
-                  <img src="assets/img/anthropocene_3.jpeg" class="img-fluid" alt="">
+                  <img src="assets/img/gioco.png" class="img-fluid" alt="">
                   <div class="portfolio-info">
                     <h3>Anthropocene: The Human Epoch</h3>
                   </div>
@@ -189,8 +189,8 @@
               <div class="col-lg-4 col-md-6 portfolio-wrap filter-app">
                 <div class="portfolio-item">
                    <a href="https://opac.sbn.it/opacsbn/opaclib?db=solr_iccu&select_db=solr_iccu&nentries=1&from=1&searchForm=opac/iccu/error.jsp&resultForward=opac/iccu/full_uni.jsp&do_cmd=search_show_cmd&format=unimarc&rpnlabel=+Tutti+i+campi+%3D+•%09Clima%3A+come+evitare+un+disastro%3A+le+soluzioni+di+oggi%3A+le+sfide+di+domani+%28parole+in+AND%29+&rpnquery=%40attrset+bib-1++%40attr+1%3D1016+%40attr+4%3D6+%22•%09Clima%3A+come+evitare+un+disastro%3A+le+soluzioni+di+oggi%3A+le+sfide+di+domani%22&sortquery=&sortlabel=&totalResult=1&fname=none"></a>
-                  <img src="assets/img/billgates_3.jpeg" class="img-fluid" alt="">
-                  <div class="portfolio-info">
+                  <img src="assets/img/invenzione.png" class="img-fluid" alt="">
+                  <div class="">
                     <h3>Bill Gates - Come evitare un disastro</h3>
                   </div>
                 </div>
@@ -199,7 +199,7 @@
               <div class="col-lg-4 col-md-6 portfolio-wrap filter-card">
                 <div class="portfolio-item">
                    <a href="https://www.wikidata.org/wiki/Q911079"></a>
-                  <img src="assets/img/broecker_2.jpeg" class="img-fluid" alt="">
+                  <img src="assets/img/quadro.png" class="img-fluid" alt="">
                   <div class="portfolio-info">
                     <h3>Wallace Broecker</h3>
                   </div>
@@ -209,7 +209,7 @@
               <div class="col-lg-4 col-md-6 portfolio-wrap filter-card">
                 <div class="portfolio-item">
                    <a href="https://en.wikipedia.org/wiki/Greta_Thunberg"></a>
-                  <img src="assets/img/greta_2.jpeg" class="img-fluid" alt="">
+                  <img src="assets/img/foto.jpeg" class="img-fluid" alt="">
                   <div class="portfolio-info">
                     <h3>Greta Thunberg</h3>
                   </div>
