--- a/knowledge.html
+++ b/knowledge.html
@@ -151,7 +151,7 @@
                   <a href="https://opac.sbn.it/opacsbn/opaclib?db=solr_iccu&select_db=solr_iccu&nentries=1&from=9&searchForm=opac/iccu/error.jsp&resultForward=opac/iccu/full_uni.jsp&do_cmd=search_show_cmd&format=unimarc&rpnlabel=+Tutti+i+campi+%3D+timothy+morton+%28parole+in+AND%29+&rpnquery=%40attrset+bib-1++%40attr+1%3D1016+%40attr+4%3D6+%22timothy+morton%22&sortquery=&sortlabel=&totalResult=29&fname=none"></a>
                   <img src="assets/img/video.png" class="img-fluid" id="items" alt="">
                   <div class="portfolio-info">
-                    <h3>Timothy Morton - Being Ecological</h3>
+                    <h3>Non c'è più tempo. Come reagire agli allarmi ambientali</h3>
                   </div>
                 </div>
               </div>
@@ -181,7 +181,7 @@
                    <a href="https://www.wikidata.org/wiki/Q26841"></a>
                   <img src="assets/img/gioco.png" class="img-fluid" alt="">
                   <div class="portfolio-info">
-                    <h3>Anthropocene: The Human Epoch</h3>
+                    <h3>Frostpunk</h3>
                   </div>
                 </div>
               </div>
@@ -191,7 +191,7 @@
                    <a href="https://opac.sbn.it/opacsbn/opaclib?db=solr_iccu&select_db=solr_iccu&nentries=1&from=1&searchForm=opac/iccu/error.jsp&resultForward=opac/iccu/full_uni.jsp&do_cmd=search_show_cmd&format=unimarc&rpnlabel=+Tutti+i+campi+%3D+•%09Clima%3A+come+evitare+un+disastro%3A+le+soluzioni+di+oggi%3A+le+sfide+di+domani+%28parole+in+AND%29+&rpnquery=%40attrset+bib-1++%40attr+1%3D1016+%40attr+4%3D6+%22•%09Clima%3A+come+evitare+un+disastro%3A+le+soluzioni+di+oggi%3A+le+sfide+di+domani%22&sortquery=&sortlabel=&totalResult=1&fname=none"></a>
                   <img src="assets/img/invenzione.png" class="img-fluid" alt="">
                   <div class="">
-                    <h3>Bill Gates - Come evitare un disastro</h3>
+                    <h3>Three-dimensional model of electricity consumption in Manchester</h3>
                   </div>
                 </div>
               </div>
@@ -201,7 +201,7 @@
                    <a href="https://www.wikidata.org/wiki/Q911079"></a>
                   <img src="assets/img/quadro.png" class="img-fluid" alt="">
                   <div class="portfolio-info">
-                    <h3>Wallace Broecker</h3>
+                    <h3>Mezzogiorno dei facchini</h3>
                   </div>
                 </div>
               </div>
@@ -211,7 +211,7 @@
                    <a href="https://en.wikipedia.org/wiki/Greta_Thunberg"></a>
                   <img src="assets/img/foto.jpeg" class="img-fluid" alt="">
                   <div class="portfolio-info">
-                    <h3>Greta Thunberg</h3>
+                    <h3>The glacier melt series</h3>
                   </div>
                 </div>
               </div>
@@ -219,18 +219,18 @@
               <div class="col-lg-4 col-md-6 portfolio-wrap filter-web">
                 <div class="portfolio-item">
                    <a href="https://www.wikidata.org/wiki/Q365691"></a>
-                  <img src="assets/img/olafur_1.jpg" class="img-fluid" alt="">
+                  <img src="assets/img/ceda.png" class="img-fluid" alt="">
                   <div class="portfolio-info">
-                    <h3>Ólafur Elíasson</h3>
+                    <h3>CEDA Archive</h3>
                   </div>
                 </div>
               </div>
               <div class="col-lg-4 col-md-6 portfolio-wrap filter-web">
                 <div class="portfolio-item">
                    <a href="https://opac.sbn.it/opacsbn/opaclib?db=solr_iccu&select_db=solr_iccu&nentries=1&from=1&searchForm=opac/iccu/error.jsp&resultForward=opac/iccu/full_uni.jsp&do_cmd=search_show_cmd&format=usmarc&rpnlabel=+Titolo+uniforme+%3D+LO11529201+&rpnquery=%40attrset+bib-1++%40attr+1%3D8006+%40attr+4%3D2++%40attr++2%3D%40frase%40+%22LO11529201%22&sortquery=&sortlabel=&totalResult=2&fname=none"></a>
-                  <img src="assets/img/snowpiercer_1.jpg" class="img-fluid" alt="">
+                  <img src="assets/img/canzone.png" class="img-fluid" alt="">
                   <div class="portfolio-info">
-                    <h3><a name="ER">Bong Joon-ho - Snowpiercer</a></h3>
+                    <h3><a name="ER">Truth to powerr</a></h3>
                   </div>
                 </div>
               </div>
