--- a/knowledge.html
+++ b/knowledge.html
@@ -209,7 +209,7 @@
               <div class="col-lg-4 col-md-6 portfolio-wrap filter-card">
                 <div class="portfolio-item">
                    <a href="https://en.wikipedia.org/wiki/Greta_Thunberg"></a>
-                  <img src="assets/img/foto.jpeg" class="img-fluid" alt="">
+                  <img src="assets/img/foto.png" class="img-fluid" alt="">
                   <div class="portfolio-info">
                     <h3>The glacier melt series</h3>
                   </div>
