--- a/knowledge.html
+++ b/knowledge.html
@@ -190,7 +190,7 @@
                 <div class="portfolio-item">
                    <a href="https://opac.sbn.it/opacsbn/opaclib?db=solr_iccu&select_db=solr_iccu&nentries=1&from=1&searchForm=opac/iccu/error.jsp&resultForward=opac/iccu/full_uni.jsp&do_cmd=search_show_cmd&format=unimarc&rpnlabel=+Tutti+i+campi+%3D+•%09Clima%3A+come+evitare+un+disastro%3A+le+soluzioni+di+oggi%3A+le+sfide+di+domani+%28parole+in+AND%29+&rpnquery=%40attrset+bib-1++%40attr+1%3D1016+%40attr+4%3D6+%22•%09Clima%3A+come+evitare+un+disastro%3A+le+soluzioni+di+oggi%3A+le+sfide+di+domani%22&sortquery=&sortlabel=&totalResult=1&fname=none"></a>
                   <img src="assets/img/invenzione.png" class="img-fluid" alt="">
-                  <div class="">
+                  <div class="portfolio-info">
                     <h3>Three-dimensional model of electricity consumption in Manchester</h3>
                   </div>
                 </div>
