--- a/knowledge.html
+++ b/knowledge.html
@@ -149,7 +149,7 @@
               <div class="col-lg-4 col-md-6 portfolio-wrap filter-web">
                 <div class="portfolio-item">
                   <a href="https://www.youtube.com/watch?v=wbR-5mHI6bo"></a>
-                  <img src="assets/img/video.png" class="img-fluid" id="items" alt="">
+                  <img src="assets/img/video.PNG" class="img-fluid" id="items" alt="">
                   <div class="portfolio-info">
                     <h3>Non c'è più tempo. Come reagire agli allarmi ambientali</h3>
                   </div>
