--- a/knowledge.html
+++ b/knowledge.html
@@ -688,6 +688,8 @@
               <div class="line-mf" style="margin-bottom: 40px;"></div>
               <br>
               <p class="description">By adopting an ontological approach, we moved to the formal representation. In our conceptual model, we translate the theoretical model into a higher level of abstraction, that allows us to visually show the relationship between different entities and resources. The existing widely known standards of DC/DCterms and CIDOC-CRM are the most used: the first one for the predicates that links some general characteristics to the related items, the latter mainly for the classes of objects. Other useful employed ontologies were FRBRoo, Music Ontology, Soma and Darwin Core. Furthermore, Schema.org proved to be decisive to identify some specific class of items. We divided our items in Multimedia (Documentary, Video and Videogame), Dataset, texts (Paris Agreement and the book), the musical work, the Human made object and the visual artwork.<p>
+              
+              <iframe width="768" height="432" src="https://miro.com/app/live-embed/o9J_lxxKNqU=/?moveToViewport=-6059,4106,12660,6936" frameBorder="0" scrolling="no" allowFullScreen></iframe>
               <br>
            
               <!--Table #1-->
