--- a/knowledge.html
+++ b/knowledge.html
@@ -688,13 +688,12 @@
       <div class="container" style="padding: 50px;">
           <div id="ER-model-container" class="row">
             <a name="ER"></a>
-            <h4 class="metadata">E/R Climate Change</h4>
+            <h4 class="metadata">Conceptual Model</h4>
             <div class="line-mf" style="margin-bottom: 40px;"></div>
             <div id="ER-model">
               <div class="second-box">
-                <p class="description"> The E/R model (entity/relation model) is a way to map semantic relations among entities by organizing them into larger categories, which are derived from an interpretation of the central topic.</p>
-                <h4 class="title">Global Warming Scenario</h4>
-                <p class="description">We created an E/R model with Miro tool. The process of selecting the items was made by drawing a conceptual map, which led us after several exchanges to focus on the ten items which suited the best the ongoing situation about Climate Change.</p>
+                <p class="description">In our conceptual model, we translate the theoretical model into a higher level of abstraction, that allows us to visually show the relationship between different entities and resources. The existing widely known standards of DC/DCterms and CIDOC-CRM are the most used: the first one for the predicates that links some general characteristics to the related items, the latter mainly for the classes of objects. Other useful employed ontologies were FRBRoo, Music Ontology, Darwin Core and Soma. Furthermore, Schema.org proved to be decisive to identify some specific class of items.</p>
+              
               </div>
               <iframe class="iframe-part" src="https://miro.com/app/live-embed/o9J_lxxKNqU=/?moveToViewport=-2712,-1947,5654,2861" frameborder="0" scrolling="no" allowfullscreen></iframe>
             </div>
