--- a/representation.html
+++ b/representation.html
@@ -257,7 +257,7 @@
                            <tr>
                             <td>Non c'è più tempo</td>
                             <td>frbroo:R4_is embodied in</td>
-                            <td>Book</td>
+                            <td>Youtube Video</td>
                           </tr>
                           <tr>
                            <tr>
